--- a/src/app/reddit/reddit.component.html
+++ b/src/app/reddit/reddit.component.html
@@ -26,6 +26,7 @@
     </div><!-- reddit-text -->
   </div><!-- reddit-info-wrapper -->
 </div><!-- reddi-content-wrapper -->
-
-<button class="save-button" (click)="save(reddit)">save</button>
-<button class="save-button" (click)="onQuote()">wat</button>
+<div class="icon-wrapper">
+  <img (click)="save(reddit)" class="icon" src="./assets/images/icons/001-plus.png" alt="save to dashboard">
+  <img (click)="onQuote()" class="icon" src="./assets/images/icons/003-error.png" alt="nahh">
+</div>
