--- a/src/app/tumblr/tumblr.component.css
+++ b/src/app/tumblr/tumblr.component.css
@@ -18,3 +18,12 @@
   border:0px;
   background-color: #d27983;
 }
+.icon-wrapper{
+  margin-top:8px;
+  display: flex;
+  justify-content: space-around;
+}
+.icon{
+  width: 30px;
+  height: 30px;
+}
