--- a/src/app/tumblr/tumblr.component.html
+++ b/src/app/tumblr/tumblr.component.html
@@ -21,5 +21,7 @@
   </div><!-- content-wrapper -->
 </div><!-- tumblr-wrapper -->
 
-<button class="save-button" (click)="save(tumblr)">save</button>
-<button class="save-button" (click)="onQuote()">wat</button>
+<div class="icon-wrapper">
+  <img (click)="save(tumblr)" class="icon" src="./assets/images/icons/001-plus.png" alt="save to dashboard">
+  <img (click)="onQuote()" class="icon" src="./assets/images/icons/003-error.png" alt="nahh">
+</div>
