--- a/src/app/youtube/youtube.component.html
+++ b/src/app/youtube/youtube.component.html
@@ -1,4 +1,7 @@
 
 <iframe [src]="'https://www.youtube.com/embed/' + video | safe"  width="560" height="315" allowfullscreen></iframe>
-<button class="save-button" (click)="save(video)">save</button>
-<button class="wat-button" (click)="onQuote()">wat</button>
+
+<div class="icon-wrapper">
+  <img (click)="save(video)" class="icon" src="./assets/images/icons/001-plus.png" alt="save to dashboard">
+  <img (click)="onQuote()" class="icon" src="./assets/images/icons/003-error.png" alt="nahh">
+</div>
