--- a/src/app/reddit/reddit.component.html
+++ b/src/app/reddit/reddit.component.html
@@ -27,11 +27,8 @@
   </div><!-- reddit-info-wrapper -->
 </div><!-- reddi-content-wrapper -->
 
-<div class="icon-wrapper">
- 
 
-<div *ngIf="showButtons">
- <img (click)="save(reddit)" class="icon" src="./assets/images/icons/001-plus.png" alt="save to dashboard">
+<div class="icon-wrapper" *ngIf="showButtons">
   <img (click)="onQuote()" class="icon" src="./assets/images/icons/003-error.png" alt="nahh">
-
+  <img (click)="save(reddit)" class="icon" src="./assets/images/icons/001-plus.png" alt="save to dashboard">
 </div>
