--- a/src/app/tumblr/tumblr.component.html
+++ b/src/app/tumblr/tumblr.component.html
@@ -22,11 +22,8 @@
 </div><!-- tumblr-wrapper -->
 
 
-<div class="icon-wrapper">
 
-<div *ngIf="showButtons">
-  <img (click)="save(tumblr)" class="icon" src="./assets/images/icons/001-plus.png" alt="save to dashboard">
+<div class="icon-wrapper" *ngIf="showButtons">
   <img (click)="onQuote()" class="icon" src="./assets/images/icons/003-error.png" alt="nahh">
-
-
+  <img (click)="save(tumblr)" class="icon" src="./assets/images/icons/001-plus.png" alt="save to dashboard">
 </div>
