--- a/src/app/tweet/tweet.component.html
+++ b/src/app/tweet/tweet.component.html
@@ -16,9 +16,8 @@
     </div><!-- row -->
 </div><!-- tweet-wrapper -->
 
-<div class="icon-wrapper">
-  
-<div *ngIf="showButtons">
-  <img (click)="save(tweet)" class="icon" src="./assets/images/icons/001-plus.png" alt="save to dashboard">
+
+<div class="icon-wrapper" *ngIf="showButtons">
   <img (click)="onQuote()" class="icon" src="./assets/images/icons/003-error.png" alt="nahh">
+  <img (click)="save(tweet)" class="icon" src="./assets/images/icons/001-plus.png" alt="save to dashboard">
 </div>
