--- a/src/app/youtube/youtube.component.html
+++ b/src/app/youtube/youtube.component.html
@@ -2,10 +2,8 @@
 <iframe [src]="'https://www.youtube.com/embed/' + video | safe"  width="560" height="315" allowfullscreen></iframe>
 
 
-<div class="icon-wrapper">
 
-<div *ngIf="showButtons">
-   <img (click)="save(video)" class="icon" src="./assets/images/icons/001-plus.png" alt="save to dashboard">
+<div class="icon-wrapper" *ngIf="showButtons">
   <img (click)="onQuote()" class="icon" src="./assets/images/icons/003-error.png" alt="nahh">
-  
+  <img (click)="save(video)" class="icon" src="./assets/images/icons/001-plus.png" alt="save to dashboard">
 </div>
