--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -78,7 +78,7 @@ li{
 }
 .search-tags{
   padding:3px;
-  background-color: #f2d8d7;
+  background-color: #faefef;
   border-radius: 10%;
   display: inline-flex;
   align-items: center;
