added swipe event for saving and dismissing elements

--- a/src/app/tumblr/tumblr.component.html
+++ b/src/app/tumblr/tumblr.component.html
@@ -1,3 +1,5 @@
+<div class="swipe-container"  (swipeleft)="swipe($event.type)" (swiperight)="swipe($event.type)">
+
 <div class="title">
   {{tumblr.summary}}
 </div><!-- title -->
@@ -29,4 +31,5 @@
   <img (click)="onQuote()" class="icon" src="./assets/images/icons/003-error.png" alt="nahh">
 
 
+</div>
 </div>
