--- a/src/app/reddit/reddit.component.html
+++ b/src/app/reddit/reddit.component.html
@@ -1,7 +1,7 @@
 
 
 
-
+<div class="swipe-container"  (swipeleft)="swipe($event.type)" (swiperight)="swipe($event.type)">
 <div class="reddit-content-wrapper">
   <div class="reddit-title">
     <h4 class="title"><a target="_blank" href="https://reddit.com/{{reddit.data.permalink}}">{{reddit.data.title}}
@@ -28,10 +28,11 @@
 </div><!-- reddi-content-wrapper -->
 
 <div class="icon-wrapper">
- 
+
 
 <div *ngIf="showButtons">
  <img (click)="save(reddit)" class="icon" src="./assets/images/icons/001-plus.png" alt="save to dashboard">
   <img (click)="onQuote()" class="icon" src="./assets/images/icons/003-error.png" alt="nahh">
 
+</div>
 </div>
