--- a/src/app/tweet/tweet.component.html
+++ b/src/app/tweet/tweet.component.html
@@ -1,4 +1,4 @@
-
+<div class="swipe-container"  (swipeleft)="swipe($event.type)" (swiperight)="swipe($event.type)">
 <div class="tweet-wrapper container-fluid">
   <div class="row">
       <div class="right-tweet-content col-xs-12 col-sm-12">
@@ -17,8 +17,9 @@
 </div><!-- tweet-wrapper -->
 
 <div class="icon-wrapper">
-  
+
 <div *ngIf="showButtons">
   <img (click)="save(tweet)" class="icon" src="./assets/images/icons/001-plus.png" alt="save to dashboard">
   <img (click)="onQuote()" class="icon" src="./assets/images/icons/003-error.png" alt="nahh">
+</div>
 </div>
