new landing page

--- a/src/app/auth/dashboard/dashboard.component.html
+++ b/src/app/auth/dashboard/dashboard.component.html
@@ -1,3 +1,4 @@
+<app-nav-bar></app-nav-bar>
 <div class="main-content">
  <button class="edit-button" (click)="edit()">edit profile</button><button class="delete-button" (click)="delete()">delete profile</button>
 </div>
