--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,21 +1,25 @@
+<div class="background-image"></div><!-- background-image -->
+<div class="content-center">
+        <div class="content-1">
+          <a [routerLink]="['/content']">
+            <h1 class="header">Content<strong>Hub</strong></h1></a>
+        </div><!-- / content-center -->
 
-<div id="myCarousel" class="carousel container slide">
-  <div class="carousel-inner">
-          <div class="active item one"></div>
-          <div class="item two"></div>
-          <div class="item three"></div>
-          <div class="item four"></div>
-          <div class="item five"></div>
-  </div>
-</div><!-- / carousel container slide -->
-<div class="input-wrapper">
-    <div class="input-group">
-          <a [routerLink]="['/content']"><h1 class="header">What are your interests?</h1></a>
-
-            <input autocomplete="off" class="tag-editor js-tag-editor" data-separator=" " id="tl" maxlength="240" name="tl" placeholder="Add up to 10 (e.g. html, c#)" type="text" value="" style="display: none;">
-              <div class="tag-editor multi-line" >
-                <input class="search-container" type="text" tabindex="0" placeholder="Search for interesting tags">
-                <span></span>
-              </div>
-    </div><!-- / input-group -->
-</div><!-- / input-wrapper -->
+    <div class="phone-images">
+      <div class="row">
+        <div class="col-xs-12 col-sm-5 phone-cont">
+          <img class="phone-1" src="../assets/images/iPhone.png" alt="iPhone">
+        </div>
+        <div class="col-xs-12 col-sm-7 phone-description">
+          <h2 class="description-header">Create and share your Content<strong>Hub</strong></h2>
+          <div class="description-wrapper">
+            <p class="description-para">Search for content on the most popular platforms, save them with a swipe and share your Content<strong>Hub</strong> with friends.</p>
+          </div>
+          <div class="signup-box">
+            <h4><a href="signup">Create an account</a></h4>
+            <p> or <a href="login">Login</a></p>
+          </div>
+        </div>
+      </div>
+    </div><!-- / phone-images -->
+</div><!-- / input-group -->
