--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -6,16 +6,16 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" [routerLink]="['content']">Content<strong>Hub</strong></a>
+      <a class="navbar-brand" href="content">Content<strong>Hub</strong></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
 
       <ul class="nav navbar-nav navbar-right">
 
-        <li data-toggle="collapse" data-target="#myNavbar" *ngIf="!this.session.isAuth"><a [routerLink]="['/signup']"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li data-toggle="collapse" data-target="#myNavbar" *ngIf="!this.session.isAuth"><a [routerLink]="['/login']"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        <li data-toggle="collapse" data-target="#myNavbar" *ngIf="this.session.isAuth"><a (click)="logout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-        <li data-toggle="collapse" data-target="#myNavbar" *ngIf="this.session.isAuth"><a [routerLink] ="['/dashboard']"><span class="glyphicon glyphicon-pushpin"></span> My dashboard</a></li>
+        <li *ngIf="!this.session.isAuth"><a [routerLink]="['/signup']"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
+        <li *ngIf="!this.session.isAuth"><a [routerLink]="['/login']"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li *ngIf="this.session.isAuth"><a (click)="logout()"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+        <li *ngIf="this.session.isAuth"><a [routerLink] ="['/dashboard']"><span class="glyphicon glyphicon-pushpin"></span> My dashboard</a></li>
 
       </ul>
     </div>
