--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -6,7 +6,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="content">Content<strong>Hub</strong></a>
+      <a class="navbar-brand" [routerLink]="['/content']">Content<strong>Hub</strong></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
 
