--- a/src/app/auth/dashboard/dashboard.component.css
+++ b/src/app/auth/dashboard/dashboard.component.css
@@ -1,27 +1,27 @@
 .edit-button{
   border:0px;
-  background-color: #d27983;
+  background-color: #1C2833;
 }
 .delete-button{
   margin-left: 3px;
   border:0px;
-  background-color: #d27983;
+  background-color: #1C2833;
 }
 
 .remove-yt{
-  color: #d27983;
+  color: #1C2833;
   position:relative;
 }
 .remove-tw{
-  color: #d27983;
+  color: #1C2833;
   position:relative;
 }
 .remove-re{
-  color: #d27983;
+  color: #1C2833;
   position:relative;
 }
 .remove-tu{
-  color: #d27983;
+  color: #1C2833;
   position:relative;
 }
 .content{
