--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -16,8 +16,8 @@
             <p class="description-para">Search for content on the most popular platforms, save them with a swipe and share your Content<strong>Hub</strong> with friends.</p>
           </div>
           <div class="signup-box">
-            <h4><a href="signup">Create an account</a></h4>
-            <p> or <a href="login">Login</a></p>
+            <h4><a [routerLink]="['/signup']">Create an account</a></h4>
+            <p> or <a [routerLink]="['/login']">Login</a></p>
           </div>
         </div>
       </div>
