--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -7,6 +7,7 @@ div{
 }
 .content-wrapper{
   width:100vw;
+  margin-top: 100px;
 }
 .search-video-cont{
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
@@ -38,7 +39,7 @@ input{
 
 .search-btn{
   width: 100%;
-    background-color: #d27983;
+    background-color: #1C2833;
     padding: 0px;
     font-weight: 700;
     font-size: 16px;
