--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -17,7 +17,10 @@
       <div class="search-video-cont col-xs-12 col-sm-8 ">
         <div class="search">
           <h3>search for tags</h3>
-          <input id="search_tags" placeholder="search tags" type="text" [(ngModel)]="searchTags">
+          <div>
+
+      </div>
+          <input id="search_tags" placeholder="search tags" type="text" [(ngModel)]="searchTags" (keyup.enter)="search()" (keyup.space)="search()">
           <!-- <div class="btn-group" role="group" aria-label="...">
             <button type="button" class="btn btn-default">trending</button>
             <button type="button" class="btn btn-default">popular</button>
@@ -27,7 +30,6 @@
             <input type="radio" [(ngModel)]="searchType" name="searchType" value="trending">trending
           </form>
           <button class="search-btn" id="search-button" (click)="search()">Search</button>
-          <button class="search-btn" (click)="next()">More!</button>
         </div>
         <!-- search -->
         <!-- youtube start -->
@@ -93,8 +95,11 @@
           <div class="trending-tags" *ngFor="let tag of tags; let i=index">
             <a *ngIf="i>=tagCounter.currentMin && i <= tagCounter.currentMax" (click)="searchThis(tag.name.substring(1))">{{tag.name}}</a>
           </div>
-          <span class="glyphicon glyphicon-triangle-left" (click)="slide(tagCounter, minus)"></span>
-          <span class="glyphicon glyphicon-triangle-right" (click)="slide(tagCounter, plus)"></span>
+          <div>
+            <span class="glyphicon glyphicon-triangle-left" (click)="slide(tagCounter, minus)"></span>
+            <span class="glyphicon glyphicon-triangle-right" (click)="slide(tagCounter, plus)"></span>
+          </div>
+
         </div>
         <!-- popular-tag -->
         <div class="popular-tags">
