--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -8,27 +8,29 @@
           <div class="search-tags" *ngFor="let search of searches; let i=index">
             <a *ngIf="i<7" (click)="searchThis(search)">#{{search}} </a> <span (click)="remove(search)" class="glyphicon glyphicon-remove"></span>
           </div>
+        </div><!-- left side-->
+      </div><!-- side-left col-xs-12 col-sm-2 -->
 
-        </div>
-        <!-- left side-->
-      </div>
-      <!-- side-left col-xs-12 col-sm-2 -->
-
-      <div class="search-video-cont col-xs-12 col-sm-8 ">
-        <div class="search">
-          <h3>search for tags</h3>
-          <input id="search_tags" placeholder="search tags" type="text" [(ngModel)]="searchTags">
-          <!-- <div class="btn-group" role="group" aria-label="...">
-            <button type="button" class="btn btn-default">trending</button>
-            <button type="button" class="btn btn-default">popular</button>
-                  </div> -->
-          <form action="">
-            <input type="radio" [(ngModel)]="searchType" name="searchType" value="popular">popular <br>
-            <input type="radio" [(ngModel)]="searchType" name="searchType" value="trending">trending
-          </form>
+    <div class="search-video-cont col-xs-12 col-sm-8 ">
+              <div class="search">
+                <h3>search for tags</h3>
+                <input id="search_tags" placeholder="search tags" type="text" [(ngModel)]="searchTags">
+              </div><!-- search-->
+            <div class="search-radio">
+              <form action="">
+                <div class="radio-cont">
+                <input class="radio-input" id="a-option"type="radio" [(ngModel)]="searchType" name="searchType" value="popular">
+                <label class="radio-label" for="a-option"><span class="radio-span">popular</span></label>
+              </div>
+              <div class="radio-cont">
+                <input type="radio" id="b-option" [(ngModel)]="searchType" name="searchType" value="trending">
+                <label class="radio-label" for="b-option"><span class="radio-span">trending</span></label>
+              </div>
+              </form>
+            </div>
           <button class="search-btn" id="search-button" (click)="search()">Search</button>
           <button class="search-btn" (click)="next()">More!</button>
-        </div>
+
         <!-- search -->
         <!-- youtube start -->
         <div *ngIf=!hidden>
