--- a/src/app/content/content.component.css
+++ b/src/app/content/content.component.css
@@ -7,7 +7,7 @@ div{
 }
 .content-wrapper{
   width:100vw;
-  margin-top: 100px;
+  margin-top: 75px;
 }
 .search-video-cont{
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
@@ -135,11 +135,13 @@ li{
   /*border: 2px dotted red;*/
 }
 /*TUMBLR END*/
-
+.search2{
+  display:flex;
+}
 
 .search-radio{
   padding-left: 5vw;
-  padding-right:5vw;
+  padding-right:2vw;
 }
 /* Other styling.. */
 .radio-label{
