--- a/src/app/index/index.component.css
+++ b/src/app/index/index.component.css
@@ -4,7 +4,7 @@ h1{
   font-family: 'Patua One', sans-serif;
 }
 
-.navbar-default .navbar-toggle .icon-bar{
+input{
   border-radius: 0;
 }
 .background-image{
