--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -15,8 +15,6 @@
           <div class="searchfield">
             <input id="search_tags" placeholder="#ironhack" type="text" [(ngModel)]="searchTags" (keyup.enter)="search()" (keyup.space)="search()">
                 <button class="search-btn" id="search-button" (click)="search()">Search</button>
-                <div class="radios">
-          </div>
         </div><!-- search -->
         <md-radio-group [(ngModel)]="searchType">
           <md-radio-button class="radiobuttons" value="popular">Popular</md-radio-button>
@@ -74,13 +72,14 @@
           <!-- TUMBLR END -->
         </div><!-- *ngIf hidden -->
       </div><!-- col-xs-12 col-md-10 -->
-<!-- END middle section, search and video content starts here -->
+      <!-- END middle section, search and video content starts here -->
       <!-- RIGHT SIDEBAR -->
       <div class="col-xs-12 col-sm-3">
         <div class="popular-tags">
           <h5>Trending tags:</h5>
-          <div class="trending-tags" *ngFor="let tag of tags; let i=index">
-            <a *ngIf="i>=tagCounter.currentMin && i <= tagCounter.currentMax" (click)="searchThis(tag.name.substring(1))">{{tag.name}}</a>
+
+          <div class="trending-tags" *ngFor="let tag of tags | tag:tagCounter.currentMin:tagCounter.currentMax; let i=index">
+            <a (click)="searchThis(tag.name.substring(1))">{{tag.name}}</a>
           </div>
           <div class="tag-control">
             <span class="glyphicon glyphicon-triangle-left" (click)="slide(tagCounter, minus)"></span>
@@ -89,8 +88,8 @@
         </div><!-- popular-tag -->
         <div class="popular-tags">
           <h5>Most popular tags:</h5>
-          <div class="trending-tags" *ngFor="let pop of popular; let i=index">
-            <a *ngIf="i>=popularCounter.currentMin && i <= popularCounter.currentMax" (click)="searchThis(pop.substring(1))">{{pop}}</a>
+          <div class="trending-tags" *ngFor="let pop of popular | tag:popularCounter.currentMin:popularCounter.currentMax; let i=index">
+            <a (click)="searchThis(pop.substring(1))">{{pop}}</a>
 
           </div><!-- trending-tags  -->
           <div class="tag-control">
