--- a/src/app/nav-bar/nav-bar.component.css
+++ b/src/app/nav-bar/nav-bar.component.css
@@ -30,6 +30,9 @@ ul li a{
 .navbar-collapse{
   background-color:#1C2833;
 }
+.navbar-right{
+  margin-right:15px;
+}
 .navbar-brand{
   font-family: 'Patua One', cursive;
   color: #E74C3C;
