--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -5,7 +5,7 @@
             <h1 class="header">Content<strong>Hub</strong></h1></a>
         </div><!-- / content-center -->
 
-    <div class="phone-images">
+    <div class="phone-images-wrapper">
       <div class="row">
         <div class="col-xs-12 col-sm-5 phone-cont">
           <img class="phone-1" src="../assets/images/iPhone3.png" alt="iPhone">
