--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,4 +1,5 @@
 <app-nav-bar></app-nav-bar>
+<div class="background-image"></div>
     <div class="container-fluid">
           <div class="card card-container">
               <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
