--- a/src/app/auth/dashboard/dashboard.component.css
+++ b/src/app/auth/dashboard/dashboard.component.css
@@ -12,18 +12,27 @@
   margin-bottom: 10px;
   /*background-color:rgba(255, 0, 0, 0.1);*/
 }
+
+.remove:hover{
+  cursor: pointer;
+}
+
+.confirm {
+  text-align: center;
+}
+
 .search-tags{
   padding:3px;
   background-color: rgba(28, 40, 51, 1);
-  color: #E74C3C;
+  color: white;
   border-radius: 10%;
   display: inline-flex;
   align-items: center;
   margin-right: 10px;
   margin-bottom: 3px;
 }
-.search-tags a {
-  color: white;
+.search-tags span {
+  color: #E74C3C;
 }
 .white-span{
   color:white;
